bookinfo/02_update_details_service/details-deployment-v2.yaml
# Copyright 2017 Istio Authors
#
#   Licensed under the Apache License, Version 2.0 (the "License");
#   you may not use this file except in compliance with the License.
#   You may obtain a copy of the License at
#
#       http://www.apache.org/licenses/LICENSE-2.0
#
#   Unless required by applicable law or agreed to in writing, software
#   distributed under the License is distributed on an "AS IS" BASIS,
#   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#   See the License for the specific language governing permissions and
#   limitations under the License.

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: details-v2
  namespace: bookinfo
spec:
  replicas: 1
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
      labels:
        app: details
        version: v2
    spec:
      containers:
      - name: details
        image: quay.io/simonpasquier/go-bookinfo-details:latest
        imagePullPolicy: IfNotPresent
        args:
        - -listen-address
        - :9080
        ports:
        - containerPort: 9080
---
