bookinfo/02_update_details_service/all-details-traffic-v2.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: details
  namespace: bookinfo
spec:
  hosts:
  - details.bookinfo.svc.cluster.local
  http:
  - route:
    - destination:
        host: details.bookinfo.svc.cluster.local
        subset: v2
