bookinfo/02_update_details_service/egress-google-api.yaml
# Register Google API services as an external service.
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: google
  namespace: bookinfo
spec:
  hosts:
  - www.googleapis.com
  ports:
  - number: 443
    name: https
    protocol: HTTPS
  resolution: DNS
  location: MESH_EXTERNAL
---
# Allow applications managed by Istio to connect to Google API services.
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: google
  namespace: bookinfo
spec:
  hosts:
  - www.googleapis.com
  tls:
  - match:
    - port: 443
      sni_hosts:
      - www.googleapis.com
    route:
    - destination:
        host: www.googleapis.com
        port:
          number: 443
      weight: 100
